server/adminportal/adminportal/static/css/styles.css
body {
  background: #007bff;
  background: linear-gradient(to right, #0062E6, #33aeff);
}

#amsf{
  color:black;
  font-style: normal;
  font-display: bold;
}

#main-nav{
  margin-bottom:0em;
  padding-bottom:1em;
  padding-top:1em;
  margin-top:-2em;
}

#main-footer{
  position:absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

#showcase {
  position: relative;
  background: url('../images/sky.jpg');
  background-size: 100%;
  min-height: 710px;  
} 


#showcase .primary-overlay {
  padding-top:6em;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#links {
  position: relative;
  min-height: 710px;
}
  
#scroll{
  padding-top: 1000px;
}

